--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <input type="number" class="form" id="dia" min="1" max="31" required="required" placeholder="19">
           </p>
           <p>
-            Até que número você quer? <br>
+            O mês do seu aniversário: <br>
             <select id="mes" class="form" required>
               <option value="june">Jun</option>
               <option value="july">Jul</option>
