--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           </p>
           <p>
             O mês do seu aniversário: <br>
-            <select id="mes" class="form" required>
+            <select id="mes" value="0" class="form" required>
               <option value="june">Jun</option>
               <option value="july">Jul</option>
               <option value="august">Ago</option>
