--- a/index.html
+++ b/index.html
@@ -22,9 +22,6 @@
           <p>
             Até que número você quer? <br>
             <select id="mes" class="form" required>
-            O mês do seu aniversário: <br>
-            <select id="mes" value="0" class="form" required>
-              <option value="june">Jun</option>
               <option value="july">Jul</option>
               <option value="august">Ago</option>
               <option value="september">Set</option>
@@ -41,7 +38,7 @@
           </p>
           <p>
             Ano que fara aniversario: <br>
-            <select id="ano" class="form" required>
+            <select id="ano" class="form" required aria-selected="none">
               <option value="2023">2023</option>
               <option value="2024">2024</option>
               <option value="2025">2025</option>
